--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.13.0+1  
   firebase_auth: ^0.14.0+5
+  shared_preferences: 0.5.3+1
 
 dev_dependencies:
   flutter_test:
